[gd_scene load_steps=54 format=3 uid="uid://cw5ic42v3wep7"]

[ext_resource type="Script" uid="uid://dxifkqojdxq0a" path="res://Scripts/Geral/player_moviment.gd" id="1_pmvhq"]
[ext_resource type="Texture2D" uid="uid://buwiyodclkf8g" path="res://Sprites/Sheets/player/player_run_sword_costas.png" id="2_fkqs1"]
[ext_resource type="Texture2D" uid="uid://dnkma0b5kv7iu" path="res://Sprites/Sheets/player/player_run_sword_animation.png" id="3_g8kdf"]
[ext_resource type="Script" uid="uid://crfk7npa02onr" path="res://Scripts/Geral/PROVISORIO --- VIDA.gd" id="4_5p0qj"]
[ext_resource type="Texture2D" uid="uid://dxtv4ric4h25d" path="res://Sprites/Sheets/player/player_ataque_costas.png" id="4_fkqs1"]
[ext_resource type="Texture2D" uid="uid://bkkbh0icw3per" path="res://Sprites/Sheets/player/new_player_ataque.png" id="5_ey3av"]
[ext_resource type="Texture2D" uid="uid://cvj3ox238pvhj" path="res://Sprites/Sheets/player/player_ataque_down.png" id="5_fkqs1"]
[ext_resource type="Texture2D" uid="uid://d00c5kl0qhryq" path="res://Sprites/Sheets/player/player_idle_sword.png" id="6_fkqs1"]
[ext_resource type="Texture2D" uid="uid://db2mbslat5rw6" path="res://Sprites/Sheets/player/player_idle_costas_sword.png" id="6_nc3o8"]
[ext_resource type="Texture2D" uid="uid://d0f6cf6ulwpjg" path="res://Sprites/Geral/seta.png" id="7_8vhvd"]
[ext_resource type="AudioStream" uid="uid://yiq4b3oftl0o" path="res://Sons e Musica/golpe.mp3" id="10_4q8k4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fkqs1"]
atlas = ExtResource("2_fkqs1")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc3o8"]
atlas = ExtResource("2_fkqs1")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6hrf"]
atlas = ExtResource("2_fkqs1")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a67c"]
atlas = ExtResource("2_fkqs1")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_62tt0"]
atlas = ExtResource("2_fkqs1")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0oku"]
atlas = ExtResource("2_fkqs1")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4ihk"]
atlas = ExtResource("3_g8kdf")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc0l2"]
atlas = ExtResource("3_g8kdf")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc8v2"]
atlas = ExtResource("3_g8kdf")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj0y6"]
atlas = ExtResource("3_g8kdf")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoxnd"]
atlas = ExtResource("3_g8kdf")
region = Rect2(192, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_64cqf"]
atlas = ExtResource("3_g8kdf")
region = Rect2(240, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wwwb"]
atlas = ExtResource("3_g8kdf")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_43kw0"]
atlas = ExtResource("3_g8kdf")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2yi0"]
atlas = ExtResource("3_g8kdf")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3oef"]
atlas = ExtResource("3_g8kdf")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4vrg"]
atlas = ExtResource("3_g8kdf")
region = Rect2(192, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khwc7"]
atlas = ExtResource("3_g8kdf")
region = Rect2(240, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6cu1"]
atlas = ExtResource("4_fkqs1")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfa7o"]
atlas = ExtResource("4_fkqs1")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_erned"]
atlas = ExtResource("5_fkqs1")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn65i"]
atlas = ExtResource("5_fkqs1")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1m5u"]
atlas = ExtResource("5_ey3av")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nqhl"]
atlas = ExtResource("5_ey3av")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7gan"]
atlas = ExtResource("6_nc3o8")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovfa0"]
atlas = ExtResource("6_nc3o8")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r7pl"]
atlas = ExtResource("6_nc3o8")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pheb3"]
atlas = ExtResource("6_nc3o8")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hhga"]
atlas = ExtResource("6_fkqs1")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0kic"]
atlas = ExtResource("6_fkqs1")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrbwb"]
atlas = ExtResource("6_fkqs1")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdprn"]
atlas = ExtResource("6_fkqs1")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcukb"]
atlas = ExtResource("6_fkqs1")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjwqp"]
atlas = ExtResource("6_fkqs1")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rs34"]
atlas = ExtResource("6_fkqs1")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnguq"]
atlas = ExtResource("6_fkqs1")
region = Rect2(144, 0, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8tubf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkqs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc3o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6hrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a67c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62tt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0oku")
}],
"loop": true,
"name": &"andando_costas",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4ihk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc0l2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc8v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj0y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoxnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64cqf")
}],
"loop": true,
"name": &"andando_frente",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wwwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43kw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2yi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3oef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4vrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khwc7")
}],
"loop": true,
"name": &"andando_lado",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6cu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfa7o")
}],
"loop": false,
"name": &"ataque_costas",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erned")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn65i")
}],
"loop": false,
"name": &"ataque_frente",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1m5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nqhl")
}],
"loop": false,
"name": &"ataque_lado",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7gan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovfa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r7pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pheb3")
}],
"loop": true,
"name": &"idle_costas",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hhga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0kic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrbwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdprn")
}],
"loop": true,
"name": &"idle_frente",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcukb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjwqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rs34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnguq")
}],
"loop": true,
"name": &"idle_lado",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iersn"]
size = Vector2(20, 29)

[sub_resource type="LabelSettings" id="LabelSettings_yuqgu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yuqgu"]
size = Vector2(30, 37)

[sub_resource type="Gradient" id="Gradient_ybr15"]
offsets = PackedFloat32Array(0.78698224)
colors = PackedColorArray(0.82206786, 0.0012204034, 0.9174733, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4q8k4"]
gradient = SubResource("Gradient_ybr15")
width = 49
height = 4
fill_to = Vector2(0, 0)

[node name="player" type="CharacterBody2D" groups=["player", "players"]]
collision_layer = 33
collision_mask = 33
safe_margin = 1.0
script = ExtResource("1_pmvhq")

[node name="sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_8tubf")
animation = &"andando_lado"
speed_scale = 1.7
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_iersn")

[node name="dano_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -51.0
offset_right = 20.0
offset_bottom = -28.0
label_settings = SubResource("LabelSettings_yuqgu")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_5p0qj")

[node name="Hitbox" type="Area2D" parent="."]
light_mask = 2
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(15, -11.5)
shape = SubResource("RectangleShape2D_yuqgu")
disabled = true

[node name="SetaPivo" type="Node2D" parent="."]

[node name="SpriteSeta" type="Sprite2D" parent="SetaPivo"]
rotation = 1.5707964
texture = ExtResource("7_8vhvd")

[node name="BarraCarga" type="TextureProgressBar" parent="."]
offset_left = -24.0
offset_top = -34.0
offset_right = 25.0
offset_bottom = -30.0
max_value = 1.5
step = 0.01
texture_progress = SubResource("GradientTexture2D_4q8k4")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_4q8k4")
bus = &"sfx"

[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="dano_timer" to="." method="_on_dano_timer_timeout"]
